; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mge/extr_if_mge.c_mge_watchdog.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mge/extr_if_mge.c_mge_watchdog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mge_softc = type { i64, %struct.ifnet* }
%struct.ifnet = type { i32 }

@IFCOUNTER_OERRORS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"watchdog timeout\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mge_softc*)* @mge_watchdog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mge_watchdog(%struct.mge_softc* %0) #0 {
  %2 = alloca %struct.mge_softc*, align 8
  %3 = alloca %struct.ifnet*, align 8
  store %struct.mge_softc* %0, %struct.mge_softc** %2, align 8
  %4 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %5 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %4, i32 0, i32 1
  %6 = load %struct.ifnet*, %struct.ifnet** %5, align 8
  store %struct.ifnet* %6, %struct.ifnet** %3, align 8
  %7 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %8 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %17, label %11

11:                                               ; preds = %1
  %12 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %13 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %14, -1
  store i64 %15, i64* %13, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %11, %1
  br label %28

18:                                               ; preds = %11
  %19 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %20 = load i32, i32* @IFCOUNTER_OERRORS, align 4
  %21 = call i32 @if_inc_counter(%struct.ifnet* %19, i32 %20, i32 1)
  %22 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %23 = call i32 @if_printf(%struct.ifnet* %22, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %24 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %25 = call i32 @mge_stop(%struct.mge_softc* %24)
  %26 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %27 = call i32 @mge_init_locked(%struct.mge_softc* %26)
  br label %28

28:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @if_inc_counter(%struct.ifnet*, i32, i32) #1

declare dso_local i32 @if_printf(%struct.ifnet*, i8*) #1

declare dso_local i32 @mge_stop(%struct.mge_softc*) #1

declare dso_local i32 @mge_init_locked(%struct.mge_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
